--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -240,6 +240,9 @@
     <None Include="Content\Overlays\Battle\enemy_start.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Content\Overlays\Battle\message.xnb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Content\Overlays\Battle\player_dead.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -252,10 +255,9 @@
     <None Include="Content\Overlays\Battle\player_hurtmore.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Content\Overlays\Battle\player_star.xnb">
+    <None Include="Content\Overlays\Battle\player_start.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Content\Overlays\Battle\player_start.xnb" />
     <None Include="Content\Sprites\Monster\enemy1.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
