--- a/RPG/RPG.csproj
+++ b/RPG/RPG.csproj
@@ -43,7 +43,7 @@
     <Compile Include="GameLogic\Core\Engine.cs" />
     <Compile Include="GameLogic\Core\XNARectangleExtention.cs" />
     <Compile Include="GameLogic\Core\Factory\ItemFactory.cs" />
-    <Compile Include="GameLogic\Core\Factory\ItemType.cs" />
+    <Compile Include="GameLogic\Enums\ItemType.cs" />
     <Compile Include="GameLogic\Interface\IEnemy.cs" />
     <Compile Include="GameLogic\Interface\IFight.cs" />
     <Compile Include="GameLogic\Interface\IItem.cs" />
@@ -66,7 +66,7 @@
     <Compile Include="GameLogic\Models\Effects\Burning.cs" />
     <Compile Include="GameLogic\Models\Effects\Healing.cs" />
     <Compile Include="Graphics\CustomShapes\CircleDrawer.cs" />
-    <Compile Include="Graphics\GameState.cs" />
+    <Compile Include="GameLogic\Enums\GameState.cs" />
     <Compile Include="GameLogic\Models\Inventory\Base\Inventory.cs" />
     <Compile Include="GameLogic\Models\PickUps\Base\PickUp.cs" />
     <Compile Include="GameLogic\Models\PickUps\Bonus.cs" />
